Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14990

mysql_upgrade fails with ERROR 1408 (HY000) at line 566: Event Scheduler: An error occurred when initializing system tables

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • 10.3.4
    • 10.3.5
    • Events, Server
    • None

    Description

      Upon upgrade from previous versions, the first server startup produces errors in the log:

      2018-01-19  1:04:37 0 [ERROR] Column count of mysql.db is wrong. Expected 23, found 22. Created with MariaDB 100303, now running 100304. Please use mysql_upgrade to fix this error
      2018-01-19  1:04:37 0 [ERROR] mysqld: Event Scheduler: An error occurred when initializing system tables. Disabling the Event Scheduler.
      

      This is fine, since mysql_upgrade hasn't been run yet. However, after that mysql_upgrade also fails:

      Phase 4/7: Running 'mysql_fix_privilege_tables'
      ERROR 1408 (HY000) at line 566: Event Scheduler: An error occurred when initializing system tables. Disabling the Event Scheduler.
      FATAL ERROR: Upgrade failed
      

      The second attempt to run mysql_upgrade, even right after the first failure, actually works:

      Phase 4/7: Running 'mysql_fix_privilege_tables'
      Phase 5/7: Fixing table and database names
      Phase 6/7: Checking and upgrading tables
      Processing databases
      information_schema
      performance_schema
      test
      Phase 7/7: Running 'FLUSH PRIVILEGES'
      OK
      

      and after that the server restarts without any errors.
      Given that Debian packages run mysql_upgrade in the background (which means it doesn't make the server upgrade/startup fail), and RPM packages don't run mysql_upgrade at all, manual re-run of the failed mysql_upgrade is a viable workaround for the beta, but it should naturally be fixed.

      Apparently upgrade from all versions is affected, I've seen it happen on upgrade from 10.0, 10.1, 10.2, 10.3.3, didn't try 5.5.

      Attachments

        Activity

          There are no comments yet on this issue.

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.